--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "backend for app fast-company",
   "main": "app.js",
+  "engines": {
+    "node": "16.2.0",
+    "npm": "8.3.2"
+  },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
     "serve": "cross-env NODE_ENV=development nodemon app.js",
